# RcppXsimd

./: .Rbuildignore  .gitignore  .travis.yml  CRAN-SUBMISSION  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  appveyor.yml  cleanup  configure  configure.ac  cran-comments.md
R/: RcppExports.R  RcppXsimd.R
extras/: Makevars.in  configure.ac  startup.R
inst/: CITATION
inst/include/xsimd/memory/: xsimd_aligned_allocator.hpp  xsimd_load_store.hpp
inst/include/xsimd/types/: xsimd_avx512_int8.hpp  xsimd_avx_int8.hpp  xsimd_sse_int8.hpp  xsimd_traits.hpp
maintanence/: download_xsimd.sh  gcc-11.patch  solaris.patch
man/: RcppXsimd-package.Rd  RcppXsimd.Rd  getAVX512Flags.Rd  getAVXFlags.Rd  getNEONFlags.Rd  getSSEFlags.Rd  getSimdFeatures.Rd  supportsAVX.Rd  supportsAVX512.Rd  supportsNEON.Rd  supportsSSE.Rd  supportsSSE42.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  RcppXsimd.cpp
src/FeatureDetector/: cpu.cpp  cpu_x86.cpp
tests/: testthat.R
tests/testthat/: test-SIMD.R
